--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,10 @@
 name: skip-proto
 on:
   push:
-    branches: '*'
+    branches: [ main ]
     tags: "[0-9]+.[0-9]+.[0-9]+"
   schedule:
-    - cron:  '0 8,18 * * *'
+    - cron:  '0 2 * * *'
   workflow_dispatch:
   pull_request:
 
